# notes-userver-backend

./: .gitmodules  CMakeLists.txt  Makefile  README.md  api-1.0.6.yaml  docker-compose.yml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  jwt_config.json  static_config.yaml
postgresql/data/: initial_data.sql
postgresql/schemas/: db_1.sql
proto/samples/: Langchain.proto  SyncService.proto  TagRecommender.proto
src/: main.cpp
src/api/auth/: auth_bearer.cpp  auth_bearer.hpp
src/api/handlers/: ai_answer.cpp  ai_answer.hpp  attachment.cpp  attachment.hpp  checklist.cpp  checklist.hpp  checklist_item.cpp  checklist_item.hpp  history.cpp  history.hpp  login.cpp  login.hpp  note.cpp  note.hpp  notes.cpp  notes.hpp  register.cpp  register.hpp  suggest.cpp  suggest.hpp  tag.cpp  tag.hpp
src/db/: sql.hpp
src/dto/: attachment.cpp  attachment.hpp  checklist.cpp  checklist.hpp  history.cpp  history.hpp  item.cpp  item.hpp  note.cpp  note.hpp  search_params.cpp  search_params.hpp  user.cpp  user.hpp
src/grpc_clients/: grpc_langchain_client.cpp  grpc_langchain_client.hpp  grpc_sync_client.cpp  grpc_sync_client.hpp  grpc_tag_recommender_client.cpp  grpc_tag_recommender_client.hpp
src/models/: attachment.hpp  checklist.cpp  checklist.hpp  note.cpp  note.hpp  query.cpp  query.hpp  tag.cpp  tag.hpp  user.hpp
src/search_service/: search_service.cpp  search_strategy.cpp  search_strategy.hpp
src/search_service/strategies/: exact_search.cpp  none_search.cpp  semantic_search.cpp
src/unit-tests/: bcrypt_test.cpp  filemanager_test.cpp  filename_generator_test.cpp  jwt_test.cpp
src/utils/: cors_middleware.cpp  data_to_text_formatter.cpp  data_to_text_formatter.hpp  file_manager.cpp  file_manager.hpp  filename_generator.cpp  filename_generator.hpp  jwt.cpp  jwt.hpp  pipeline_builder.cpp
tests/: conftest.py
tests/test_suggest/: test_suggest_queries.py  test_suggest_tags.py
tests/tests_ai_answer/: test_ai_answer.py
tests/tests_attachment/: test_add_attachment.py  test_delete_attachment.py  test_get_attachment.py
tests/tests_auth/: test_login.py  test_register.py
tests/tests_checklist/: test_delete_checklist.py  test_get_checklist.py  test_note_add_checklist.py  test_patch_checklist.py
tests/tests_checklist_item/: test_checklist_create_item.py  test_checklist_delete_item.py  test_checklist_patch_item.py
tests/tests_grpc_clients/: test_lagnchain_client.py  test_sync_client.py  test_tag_recommender_client.py
tests/tests_history/: test_history.py
tests/tests_note/: test_create_note.py  test_delete_note.py  test_get_all_note.py  test_get_one_note.py  test_patch_note.py
tests/tests_tag/: test_all_tags.py  test_create_tag.py  test_note_add_tag.py  test_note_delete_tag.py  test_note_tags.py
